ecmascript/parser/tests/typescript-errors/tsc/externalModules/exportAssignNonIdentifier/input.ts.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
  --> $DIR/tests/typescript-errors/tsc/externalModules/exportAssignNonIdentifier/input.ts:18:14
   |
18 | export = void; // Error, void operator requires an argument
   |              ^

